# deepresearch-cli

./: .gitignore  CLAUDE.md  MANIFEST.in  PROJECT_PROGRESS.md  README.md  RELEASE.md  config_template.yaml  pyproject.toml  requirements.txt  run.ps1  watch.ps1
books/: Cell (Robin Cook) (z-library.sk, 1lib.sk, z-lib.sk).epub  Cell (Robin Cook) (z-library.sk, 1lib.sk, z-lib.sk).md  量子计算入门.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/config/: manager.py
src/ingest/: __init__.py  chunker.py  embedder.py  loader.py  pipeline.py  vector_store.py
src/query/: __init__.py  llm.py  rag.py  retriever.py
src/tools/: __init__.py  doc_converter.py
