[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepresearch-cli"
version = "0.1.0"
description = "本地 CLI 研究工具：结合 Obsidian 书籍库 + 向量检索 + LLM 推理"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "研究者", email = "user@example.com"}
]
keywords = ["cli", "research", "rag", "obsidian", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "sentence-transformers>=2.7.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.scripts]
research = "src.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.ruff]
line-length = 100
target-version = "py310"
